After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 760548 - session: Crash better when no sessions are installed
session: Crash better when no sessions are installed
Status: RESOLVED FIXED
Product: gdm
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: GDM maintainers
GDM maintainers
Depends on:
Blocks:
 
 
Reported: 2016-01-12 18:38 UTC by Michael Catanzaro
Modified: 2016-01-12 20:30 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
session: Crash better when no sessions are installed (1.04 KB, patch)
2016-01-12 18:38 UTC, Michael Catanzaro
committed Details | Review

Description Michael Catanzaro 2016-01-12 18:38:14 UTC
Currently gdm crashes if no sessions are installed. It crashes badly. Crash better.

Not sure if this is the best solution, but seems reasonable that this would be fatal.
Comment 1 Michael Catanzaro 2016-01-12 18:38:17 UTC
Created attachment 318902 [details] [review]
session: Crash better when no sessions are installed

If no session desktop file can be found in the search path, we are
doomed. Crash nicely with g_error rather than continuing on to call
g_sequence_get with an invalid GSequenceIter.
Comment 2 Ray Strode [halfline] 2016-01-12 18:53:45 UTC
don't really care what we do here, since it basically means the distro screwed up.

g_error or g_abort is fine with me
Comment 3 Ray Strode [halfline] 2016-01-12 18:55:08 UTC
Review of attachment 318902 [details] [review]:

​
Comment 4 Michael Catanzaro 2016-01-12 20:29:23 UTC
(In reply to Ray Strode [halfline] from comment #2)
> don't really care what we do here, since it basically means the distro
> screwed up.

Or the Michael.
Comment 5 Michael Catanzaro 2016-01-12 20:30:03 UTC
Attachment 318902 [details] pushed as f42ea43 - session: Crash better when no sessions are installed