session: Crash better when no sessions are installed

If no session desktop file can be found in the search path, we are
doomed. Crash nicely with g_error rather than continuing on to call
g_sequence_get with an invalid GSequenceIter.

https://bugzilla.gnome.org/show_bug.cgi?id=760548